--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "helmet": "^4.6.0",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.14"
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.14",
+    "path": "^0.12.7"
   }
 }
